Revise booking process and enhance accessibility
Updated the booking process and improved accessibility features.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="top">
-    <h1>🎫 MovieGo — Booking ticket website</h1>
+    <h1> MovieGo — Booking ticket website</h1>
     <div class="actions">
       <button id="themeToggle">Dark</button>
     </div>
@@ -54,7 +54,7 @@
         <img id="schedulePoster" alt="Selected movie poster" loading="lazy">
         <div>
           <p class="seat-tag" id="scheduleGenre"></p>
-          <h2 id="scheduleTitle">Choose cinema & showtime</h2>
+          <h2 id="scheduleTitle">Booking the ticket</h2>
           <p id="scheduleDetail" class="muted"></p>
         </div>
       </div>
@@ -102,7 +102,7 @@
           <div class="selection-card">
             <h3>Your selection</h3>
             <div id="selectedSeatsList" class="selected-seats"></div>
-            <p id="selectionNotice" class="muted subtle">Pick any seat to begin.</p>
+            <p id="selectionNotice" class="muted subtle">Pick any seat to book.</p>
             <ul class="seat-tips">
               <li>Tap again to deselect a seat.</li>
               <li>Move your cursor over seats to see their row and price.</li>
@@ -139,7 +139,7 @@
     <section id="confirmView" class="view hidden">
       <h2>Booking Confirmed</h2>
       <p id="confirmMessage"></p>
-      <button id="doneBtn">Back to events</button>
+      <button id="doneBtn">Back to homepage</button>
     </section>
   </main>
   <button id="scrollTopBtn" class="scroll-top" aria-label="Scroll to top">↑</button>
